# penn-marketplace

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh  post-start.sh
.github/workflows/: build-and-deploy.yml  build.yml
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/market/: admin.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/market/management/commands/: create_listing_offers.py  generate_items.py  generate_listings.py  seed_offers.py
backend/market/migrations/: 0001_initial.py  0002_alter_user_options_alter_offer_message.py  0002_category_sublet_remove_type_recommended_attributes_and_more.py  0003_alter_listing_price_alter_offer_message_and_more.py  0003_delete_phoneverification.py  0004_listing_status.py  0004_rename_address_sublet_street_address_and_more.py  0005_offer_status.py  0005_sublet_true_latitude_sublet_true_longitude.py  0006_rename_favorites_to_saved.py  0010_attribute_item_additional_data_and_more.py
backend/tests/market/: self_user_items.json  self_user_sublets.json  test_market.py  user_1_items.json  user_1_sublets.json
backend/utils/: sms.py
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/actions/: items.ts  sublets.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/callback/: route.ts
frontend/app/create/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/sublets/: page.tsx
frontend/app/test/: page.tsx
frontend/components/Filters/: DateSearch.tsx  Select.tsx
frontend/components/Filters_tmp/: SearchInput.tsx
frontend/components/Navbar/: Logo.tsx  Navbar.tsx  NavbarActions.tsx
frontend/components/Navbar_tmp/: NavbarActions.tsx  SearchBar.tsx
frontend/components/common/: Footer.tsx  FormDialog.tsx  FormField.tsx  FormSelect.tsx  ImageDropzone.tsx  ImagePreview.tsx  PageHeader.tsx
frontend/components/filters/: DatePicker.tsx  DateSearch.tsx  FilterBar.tsx  ItemFilters.tsx  (+4 more)
frontend/hooks/: useAddressAutocomplete.ts  useImageUpload.ts  useListings.ts
frontend/lib/: actions.ts  api.ts  auth.ts  constants.ts  errors.ts  queryKeys.ts  tanstack-query.d.ts  types.ts  utils.ts  validations.ts
frontend/providers/: FiltersProvider.tsx  TanstackQueryProvider.tsx
frontend/types/: items.ts  listings.ts  sublets.ts
scripts/: check.sh  setup-dev.sh  setup.sh
(+63 files in other folders)
