[project]
name = ""
version = "0.0.1"
requires-python = "~=3.11"
dependencies = [
    "beautifulsoup4",
    "dj-database-url",
    "djangorestframework",
    "pandas",
    "html5lib",
    "psycopg2",
    "sentry-sdk",
    "django==5.0.2",
    "django-cors-headers",
    "pyyaml",
    "uritemplate",
    "uwsgi",
    "django-filter",
    "django-labs-accounts>=1.0.6",
    "django-debug-toolbar",
    "django-runtime-options",
    "django-storages",
    "django-phonenumber-field[phonenumberslite]",
    "pillow",
    "boto3",
    "apns2",
    "numpy",
    "celery==5.4.0",
    "django-redis",
    "redis",
    "python-dateutil",
    "selenium",
    "webdriver-manager",
    "pre-commit",
    "alt-profanity-check",
    "inflection",
    "firebase-admin",
    "twilio",
]

[dependency-groups]
dev = [
    "black==24.4.0",
    "unittest-xml-reporting",
    "flake8==6.1.0",
    "flake8-isort==6.1.0",
    "flake8-quotes==3.3.2",
    "django-extensions",
    "flake8-absolute-import",
    "rope",
    "pytest",
    "tblib",
    "coverage",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
